# auth-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml
api-docs/: bruno.json  collection.bru
api-docs/api-keys/: Create API Key.bru  Get API Key.bru  List API Keys by Resource.bru  List API Keys by Subject.bru  List API Keys.bru  Revoke API Key.bru  Update API Key.bru  Validate API Key.bru  folder.bru
api-docs/cluster/: Cluster Status.bru  Health Check.bru  folder.bru
api-docs/environments/: local.bru
api-docs/sessions/: Create Session.bru  Get Session.bru  List Sessions by Resource.bru  List Sessions by Subject.bru  List Sessions.bru  Revoke Session by Token.bru  Revoke Session.bru  Validate Session.bru  folder.bru
api-docs/user-agents/: Parse User Agent.bru  folder.bru
benchmarks/: README.md  api_key_lifecycle.js  helpers.js  leader_forwarding.js  read_throughput.js  run-all.sh  session_lifecycle.js  write_throughput.js
e2e/: api_keys.hurl  cluster.hurl  sessions.hurl  user_agents.hurl
src/: config.rs  lib.rs  main.rs  state_machine.rs  testutil.rs
src/api/: handlers.rs  middleware.rs  mod.rs  response.rs  routes.rs
src/api/handlers/: admin.rs  api_keys.rs  internal.rs  mod.rs  sessions.rs
src/cluster/: catchup.rs  discovery.rs  election.rs  handlers.rs  heartbeat.rs  mod.rs  node.rs  replication.rs  rpc.rs  server.rs  transport.rs
src/device/: mod.rs  ua_parser.rs
src/expiration/: cleaner.rs  mod.rs
src/storage/: api_keys.rs  db.rs  mod.rs  models.rs  node_state.rs  replication.rs  sessions.rs  tables.rs
src/tokens/: api_key.rs  generator.rs  mod.rs  session.rs
tests/: api_tests.rs  cluster_tests.rs  integration_tests.rs
