[package]
name = "auth-manager"
version = "0.1.0"
edition = "2021"
description = "A tiny, fault-tolerant distributed token management service"
license = "MIT"

[lib]
name = "auth_manager"
path = "src/lib.rs"

[[bin]]
name = "auth-manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
redb = "2"
woothee = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
