[package]
name = "auth-manager"
version = "0.7.0"
edition = "2021"
description = "A tiny, fault-tolerant distributed token management service"
license = "MIT"

[lib]
name = "auth_manager"
path = "src/lib.rs"

[[bin]]
name = "auth-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
muster = { git = "https://github.com/hpopp/muster.git", tag = "v0.1.0" }
rand = "0.8"
redb = "2"
rmp-serde = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "1.0.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-stackdriver = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
woothee = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
